Resolves #59 added `-webkit-overflow-scrolling: touch` for smoother inertial scrolling on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,8 @@
 /* VirtualScroll default theme */
 
 .VirtualScroll {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .VirtualScroll_innerScrollContainer {
